--- a/scrypto.html
+++ b/scrypto.html
@@ -295,8 +295,8 @@
           <div class="image3-sc-are"><img src="instagram.svg" alt="" /></div>
         </div>
 
-        <div id="ındır" class="img2-sc-are d-flex">
-          <div style="padding-right: 0.5rem"><img src="app.svg" alt="" /></div>
+        <div class="img2-sc-are d-flex">
+          <div  id="ındır" style="padding-right: 0.5rem"><img src="app.svg" alt="" /></div>
           <div style="padding-left: 0.5rem"><img src="play.svg" alt="" /></div>
         </div>
 
