--- a/scrypto.html
+++ b/scrypto.html
@@ -131,7 +131,7 @@
         </div>
       </div>
     </div>
-    <div id="nasıl" class="container">
+    <div class="container">
       <span class="section-border"> </span>
     </div>
     <div class="section-image text-alıgın-c">
@@ -139,7 +139,7 @@
     </div>
     <div class="section-cards-container">
       <div class="section-cards-text container text-alıgın-c">
-        <div class="section-cards-title text-alıgın-c">
+        <div  id="nasıl" class="section-cards-title text-alıgın-c">
           <h3>Nasıl Çalışır?</h3>
         </div>
         <div class="section-text-cards-container">
@@ -295,8 +295,8 @@
           <div class="image3-sc-are"><img src="instagram.svg" alt="" /></div>
         </div>
 
-        <div class="img2-sc-are d-flex">
-          <div  id="ındır" style="padding-right: 0.5rem"><img src="app.svg" alt="" /></div>
+        <div   id="ındır" class="img2-sc-are d-flex">
+          <div style="padding-right: 0.5rem"><img src="app.svg" alt="" /></div>
           <div style="padding-left: 0.5rem"><img src="play.svg" alt="" /></div>
         </div>
 
