--- a/scrypto.html
+++ b/scrypto.html
@@ -92,7 +92,7 @@
     <div id="scrypto" class="cards-container">
       <div class="container">
         <div class="cards-title text-alıgın-c">
-          <h3 style="margin-bottom: 3rem">Scrypto Nedir ?</h3>
+          <h3>Scrypto Nedir ?</h3>
         </div>
         <div class="card-text-container">
           <div style="padding-top: 3rem;"  class="cards-text1">
