--- a/scrypto.html
+++ b/scrypto.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="
+scroll-behavior: smooth;
+">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -56,10 +58,10 @@
           <div class="w-100 d-flex align-items-center">
             <img class="menu-icon menu-logo" src="menu.svg" alt="" />
           </div>
-          <div>
+          <div style="display: contents;">
             <img
               class="app-logo"
-              style="width: 8rem"
+              style="width: 6.5rem"
               src="logowhite.png"
               alt=""
             />
@@ -256,7 +258,7 @@
               border-radius: 5px;
               text-align: center;
               color: #fff;
-              margin-top: 3rem;
+              margin-top: 1rem;
             "
             class="button-1"
           >
